--- a/scss/blocks/_media.scss
+++ b/scss/blocks/_media.scss
@@ -1,5 +1,12 @@
 @media screen and (min-width: 1200px){
     ///buisnes///
+    .reasons__item-img_phone {
+        display: none;
+    }
+
+    .requirements .__item {
+        display: none;
+    }
 
 
     ///equipment.html///
@@ -79,6 +86,14 @@
     ///buisnes///
     .article__buisnes {
         flex-direction: column;
+    }
+
+    .requirements .__item {
+        display: none;
+    }
+
+    .reasons__item-img_phone {
+        display: none;
     }
 
     .article__buisnes .item__buisnes .descr__busines {
@@ -246,7 +261,7 @@
         left: 476px;
     }
 
-    .reasons__items .wrapper:last-child .__item:nth-child(1)::before {
+    .reasons__items .wrapper:last-child .__item:nth-child(2)::before {
         color: #15385F;
         border-left: none;
         border-bottom: 6px solid;
@@ -254,12 +269,11 @@
         content: '';
         position: absolute;
         width: 43px;
-        height: 185px;
-        bottom: 297px;
-        left: 557px;
+        bottom: 383px;
+        left: 469px;
     }
 
-    .reasons__items .wrapper:last-child .__item:nth-child(1)::after {
+    .reasons__items .wrapper:last-child .__item:nth-child(2)::after {
         border-right: 6px solid currentcolor;
         border-bottom: 6px solid currentcolor;
         content: '';
@@ -268,19 +282,16 @@
         height: 25px;
         color: #15385F;
         transform: rotate(45deg);
-        bottom: 365px;
-        left: 477px;
+        bottom: 366px;
+        left: 473px;
     }
 
-    .reasons__items .wrapper:last-child .__item:nth-child(2)::before {
-        border-bottom: none;
-        content: '';
+    .reasons__items .wrapper:last-child .__item:nth-child(1)::before {
+        display: none;
     }
 
-    .reasons__items .wrapper:last-child .__item:nth-child(2)::after {
-        border-right: none;
-        border-bottom: none;
-        content: '';
+    .reasons__items .wrapper:last-child .__item:nth-child(1)::after {
+        display: none;
     }
 
     .hint .swiper-button-prev {
@@ -700,11 +711,11 @@
         left: 362px;
     }
 
-    .reasons__items .wrapper:last-child .__item:nth-child(1)::before {
-        left: 442px;
+    .reasons__items .wrapper:last-child .__item:nth-child(2)::before {
+        left: 358px;
     }
 
-    .reasons__items .wrapper:last-child .__item:nth-child(1)::after {
+    .reasons__items .wrapper:last-child .__item:nth-child(2)::after {
         left: 362px;
     }
 
@@ -1240,7 +1251,19 @@
     .article__buisnes .item__buisnes .descr__busines {
         max-width: 556px;
     }
+    .requirements .__item {
+        display: none;
+    }
 
+
+
+
+    .nav_menu__items:nth-child(1) {
+        margin: 0 auto;
+    }
+    .nav_menu__items:last-child {
+        margin: 0 auto;
+    }
     .idea .wrapper__four .item__title .border__article {
         margin-left: 45px;
     }
@@ -1251,6 +1274,20 @@
 
     .communication__btn button{
         margin-bottom: 30px;
+    }
+
+    .reasons__items .wrapper .__item {
+        position: relative;
+        width: 330px;
+    }
+
+    .reasons__items .wrapper:last-child .__item {
+        position: relative;
+        width: 360px;
+    }
+
+    .reasons__items .wrapper {
+        position: static;
     }
 
     .advantages__wrapper {
@@ -1273,31 +1310,53 @@
     }
 
     .reasons__items .wrapper .__item::before {
-        left: 48%;
+        left: 47%;
+        bottom: 0px;
+        top: 106%;
     }
 
     .reasons__items .wrapper .__item::after {
-        left: 271px;
+        left: 48.1%;
+        bottom: 0px;
+        top: 108%;
     }
 
     .reasons__items .wrapper .__item:nth-child(2)::after {
-        left: 271px;
+        left: 49.1%;
+        bottom: 0px;
+        top: 108%;
     }
 
     .reasons__items .wrapper .__item:nth-child(3)::before {
-        left: 39%;
+        left: 31%;
+        bottom: 0px;
+        top: 89%;
     }
 
     .reasons__items .wrapper .__item:nth-child(3)::after {
-        left: 273px;
+        left: 48.1%;
+        bottom: 0px;
+        top: 108%;
     }
 
-    .reasons__items .wrapper:last-child .__item:nth-child(1)::before {
-        left: 64%;
+    .reasons__items .wrapper:last-child .__item:nth-child(2)::before {
+        left: 47.5%;
+        bottom: 0px;
+        top: 105%;
     }
 
-    .reasons__items .wrapper:last-child .__item:nth-child(1)::after {
-        left: 276px;
+    .reasons__items .wrapper:last-child .__item:nth-child(2)::after {
+        left: 48.5%;
+        bottom: 0px;
+        top: 107%;
+    }
+
+    .reasons__items .wrapper:last-child .__item:nth-child(3)::before {
+        display: none;
+    }
+
+    .reasons__items .wrapper:last-child .__item:nth-child(3)::after {
+        display: none;
     }
 
     .hint .swiper-button-prev {
@@ -1857,7 +1916,7 @@
     .header_one {
         display: block;
         position: absolute;
-        top: -200px;
+        top: -200%;
         left: 0;
         background: rgb(245, 246, 246);
         box-shadow: #ccc;
@@ -1871,7 +1930,10 @@
         display: block;
         top: 0px;
         transition: all 0.4s ease;
+        padding-top: 30px;
     }
+
+    
 
     .header_logo-one {
         display: none;
@@ -1882,7 +1944,8 @@
     }
 
     .menu {
-        font-size: 10px;
+        font-size: 15px;
+        line-height: 40px;
     }
 
     .nav_menu__items::marker {
@@ -2253,6 +2316,53 @@
 }
 
 @media screen and (max-width: 576px) {
+
+    .overlay .wrapper__form {
+        padding: 28px 15px;
+        width: 300px;
+    }
+
+    .overlay .wrapper__form .form__items textarea::placeholder{
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 120%;
+        color: #15385F;
+    }
+
+    .overlay .wrapper__form .form__items textarea {
+        width: 100%;
+    }
+
+    .overlay .wrapper__form h2 {
+        font-size: 27px;
+    }
+
+    .overlay .wrapper__form .form__items input {
+        font-size: 14px;
+    }
+
+    .modal-form_btn  {
+        font-size: 16px;
+    }
+
+    .overlay .wrapper__form .form__items .modal_privacy p {
+        font-size: 14px;
+        line-height: 120%;
+    }
+
+    .overlay .wrapper__form .form__items .modal_privacy input {
+        width: 50px;
+    }
+
+    .overlay .wrapper__form .form__items .modal_privacy {
+        margin-left: 10px;
+    }
+
+    .overlay .wrapper__form .form__items p {
+        margin-left: 0px;
+    }
+
     ///buisnes///
     .article__buisnes .title__busines h3 {
         max-width: 380px;
@@ -2275,10 +2385,10 @@
     }
 
     .busines .wrapper .__item-descr:last-child p {
-        max-width: 405px;
+        width: 405px;
     }
     .buisines__item_img {
-        max-width: 405px;
+        width: 405px;
     }
 
     .busines .busines__border {
@@ -2310,7 +2420,7 @@
     }
 
     .idea .wrapper__four .item__title .border__article {
-        max-width: 120px;
+        width: 120px;
         margin-left: 33px;
     }
 
@@ -2341,30 +2451,6 @@
 
     .wrapper__info .calc__wrapper .__info:last-child p:last-child {
         border-bottom: none;
-    }
-
-    .reasons__items .wrapper .__item::after {
-        left: 198px;
-    }
-
-    .reasons__items .wrapper .__item:nth-child(2)::after {
-        left: 198px;
-    }
-
-    .reasons__items .wrapper .__item:nth-child(3)::before {
-        left: 35%;
-    }
-
-    .reasons__items .wrapper .__item:nth-child(3)::after {
-        left: 197px;
-    }
-
-    .reasons__items .wrapper:last-child .__item:nth-child(1)::before {
-        left: 69%;
-    }
-
-    .reasons__items .wrapper:last-child .__item:nth-child(1)::after {
-        left: 199px;
     }
 
     .hint h2 {
@@ -2803,10 +2889,10 @@
 
     .main__wrapper-descr .__item .__descr {
         border-bottom: 1px solid rgba(21, 56, 95, 0.3);
-        margin-top: 15px;
+        margin-top: 0px;
         max-width: 556px;
         display: block;
-        padding-bottom: 0px;
+        padding-bottom: 15px;
     }
 
     .main__wrapper-descr .__item {
@@ -2855,7 +2941,7 @@
     }
 
     .footer_item_input {
-        margin: 60px auto;
+        margin: 60px 10px;
         padding-left: 0;
     }
 
@@ -2957,8 +3043,320 @@
 }
 
 @media screen and (max-width: 425px) { 
-    ///buisnes///
+    .main__wrapper .__item p {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
 
+    .__title .title__arrow:before {
+        left: 158px;
+    }
+
+    .__title .title__arrow:after{
+        left: 188px;
+    }
+    .main__wrapper .__item h2 {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .equipment__title h3 {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .wrapper_three {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .wrapper__four{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .wrapper__form {
+        margin-left: 10px;
+        margin-right: 10px;
+        width: 100%;
+    }
+
+    .form__items input {
+        width: 100%;
+    }
+    .form__items {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .text {
+        width: 100%;
+    }
+
+    .img_phone_pom {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .phone__arrow  .swiper-team-next{
+        margin-right: 10px;   
+    }
+
+    .phone__arrow  .swiper-team-prev{
+        margin-left: 10px;   
+    }
+    .reviews_video .swiper-team-next{
+        margin-right: 10px;   
+    }
+
+    .reviews_video  .swiper-team-prev{
+        margin-left: 10px;   
+    }
+    .footer_form {
+        width: 100%;
+    }
+    
+    .we-about {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .phone_main-block .__item{
+        margin-right: 10px;
+    }
+
+    .__promo-title {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .wrapper__contackt {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .wrapper__items-phone {
+        margin-left: 10px;
+        margin-right: 10px;
+
+    }
+
+    .wrapper__items {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .slider__gallery {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .main_product .promo_product {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .wrapper {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .info__title {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .product {
+        margin-left: 10px;
+        margin-right: 10px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+
+    .main__wrapper-descr .__item .__descr{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .main__wrapper-descr .__item{
+        width: 100%;
+    }
+
+    .promo_main-block {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .about_img__phone {
+        max-width: 100%;
+    }
+
+    .about-video {
+        width: 100%;
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .we_block_h1 {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    
+    .we_info_button {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .slider_work {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .border_article {
+        margin-left: 10px;
+    }
+
+    .article_all {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .footer_item_text {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .idea .wrapper__four .item__title h3 {
+        font-size: 32px;
+    }
+    .busines .busines__border {
+        display: none;
+    }
+    .advantages h2 {
+        position: relative;
+    }
+
+    .advantages h2::before {
+        position: absolute;
+        content: '';
+        border: 2px solid #15385F;
+        width: 140px;
+        top: -50px;
+        display: block;
+        margin-left: 30%;
+    }
+
+    .hint::before {
+        position: absolute;
+        content: '';
+        border: 2px solid #15385F;
+        width: 140px;
+        top: 58px;
+        display: block;
+        margin-left: 30%;
+    }
+
+    .calc .info__title::before {
+        position: absolute;
+        content: '';
+        border: 2px solid #15385F;
+        width: 140px;
+        top: -50px;
+        display: block;
+    }
+
+    .calc .info__title {
+        position: relative;
+    }
+
+    .__title {
+        margin-left: 10px;
+    }
+
+    .buisnes__wrapper {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .reasons__wrapper {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .communication__descr {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .advantages {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .wrapper__info .calc__wrapper .__info {
+        width: 100%;
+        p {
+            width: 100%;
+        }
+    }
+    .idea .wrapper__four {
+        margin-left: 10px;
+        margin-right: 10px;
+        width: 100%;
+    }
+
+    .calc .info__title {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .expenses__wrapper {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+    .requirements {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .hint {
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .help {  
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+
+    .help p {
+        margin-left: 0;
+    }
+
+    .footer_item {
+        img {
+            margin-left: 10px;
+        }
+    }
+
+    .footer_item_menu {
+        margin-left: 10px;
+    }
+
+    .footer_descr {
+        margin-left: 10px;
+    }
+
+
+    
+    
+    ///buisnes///
+    .header_two {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+
+    .promo_product .__item {
+        width: 100%;
+    }
+
+    .expenses__wrapper .__item .__descr:nth-child(3) {
+        max-width: 200px;
+    }
 
 
     ///equipment.html///
@@ -3131,21 +3529,24 @@
     }
     .main__wrapper-descr .__item a::before {
         content: '';
-        left: 87%;
+        left: 89%;
     }
 
     .main__wrapper-descr .__item a::after{
         content: '';
         left: 97%;
+        top: 28%;
     } 
 
     .main__wrapper-descr .__item .__descr a {
         position: relative;
-        padding-right: 355px;
+        width: 100%;
         padding-top: 15px;
+        padding-right: 0px;
+        display: block;
     }
     .container {
-        width: 355px;
+        width: 100%;
     }
 
     .phone_number  {
@@ -3275,8 +3676,108 @@
 @media screen and (max-width: 375px) {  
     ///equipment.html///
 
+    .promo_product .__item .__title h2 {
+        font-size: 28px;
+    }
+    .reasons__items .wrapper .__item:nth-child(3)::after {
+        left: 49.5%;
+    }
+    .busines .wrapper .__item-descr {
+        width: 100%;
+    }
+
+    .main__wrapper-descr .__item a::before {
+        content: '';
+        left: 87%;
+        top: 65%;
+    }
+
+    .main__wrapper-descr .__item a::after{
+        content: '';
+        left: 97%;
+        top: 50%;
+    } 
 
 
+    .buisines__item_img:last-child {
+        max-width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .busines .wrapper .__item-descr:last-child {
+        width: 100%;
+        p{
+            max-width: 100%;
+            padding-left: 10px;
+            padding-right: 10px;
+        }
+        img {
+            max-width: 100%;
+        }
+    }
+
+    .buisines__item_img {
+        max-width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .idea__img {
+        max-width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .idea .wrapper__four {
+        margin-left: 0px;
+        margin-right: 0px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .idea .wrapper__four .item__title h3 {
+        font-size: 24px;
+    }
+
+    .wrapper__info .calc__wrapper .__info {
+        max-width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .expenses_img {
+        max-width: 100%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+
+    .expenses__wrapper .__item .__descr p {
+        font-size: 14px;
+    }
+
+    .expenses .expenses__wrapper .__item .__descr {
+        max-width: 100%;
+        width: 100%;
+    }
+    .expenses__wrapper .__item .__descr:nth-child(3) {
+        max-width: 117px;
+    }
+    .expenses__wrapper .__item .__descr:nth-child(2) {
+        max-width: 220px;
+    }
+
+    .article__buisnes .title__busines h3 {
+        max-width: 100%;
+    }
+
+    .reasons__items .wrapper .__item {
+        max-width: 300px;
+    }
+
+    .reasons__items .wrapper:last-child .__item {
+        max-width: 300px;
+    }
 
     ///404.html///
 
@@ -3351,12 +3852,10 @@
     }
 
     .form__items input {
-        width: 300px;
         font-size: 14px;
     }
 
     .text {
-        width: 300px;
         font-size: 14px;
     }
 
@@ -3365,7 +3864,8 @@
     }
 
     .footer_descr_phone {
-        margin-left: 25%;
+        display: block;
+        margin: 0 auto;
         margin-bottom: 15px;
     }
 
@@ -3464,34 +3964,28 @@
     }
     .about-video {
         background: none;
-    }
-    .main__wrapper-descr .__item a::before {
-        content: '';
-        left: 85%;
-    }
-
-    .main__wrapper-descr .__item a::after{
-        content: '';
-        left: 96%;
     } 
 
     .main__wrapper-descr .__item .__descr a {
         position: relative;
-        padding-right: 300px;
         padding-top: 15px;
+        width: 100%;
     }
     .container {
-        width: 300px;
+        width: 100%;
     }
 
     .about-video_play {
-        top: -29%;
-        left: -23%;
+        top: -18%;
+        left: -10%;
     }
 
-    .footer_form {
-        width: 300px;
+    .we_block_info {
+        margin-left: 10px;
+        margin-right: 10px;
     }
+
+
     
     .border_article {
         width: 100px;
