--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -104,3 +104,14 @@
 .svg_phone {
     margin-right: 9px;
 }
+
+.logo {
+    width: 220px;
+    height: 73px;
+    background: url(../../img/logo_png.png);
+    background-size: 100%;
+}
+
+.header_logo-one {
+    display: none;
+}
