--- a/scss/blocks/_gallery.scss
+++ b/scss/blocks/_gallery.scss
@@ -1,7 +1,8 @@
 .__item-gallery {
     width: 560px;
+    
     height: 360px;
-    background: url(../../img/gallery_1.jpg);
+    background-image: linear-gradient(360deg, #15385F 0%, rgba(21, 56, 95, 0) 40%),url(../../img/gallery_1.jpg) ;
     margin-right: 80px;
     margin-bottom: 70px;
     text-decoration: none;
@@ -10,19 +11,20 @@
     padding-bottom: 22px;
     padding-left: 22px;
     padding-top: 262px;
+
 }
 
 .__item-gallery:nth-child(2) {
-    background: url(../../img/gallery_2.jpg);
+    background-image: linear-gradient(360deg, #15385F 0%, rgba(21, 56, 95, 0) 40%),url(../../img/gallery_2.jpg) ;
     margin-right: 0px;
 }
 
 .__item-gallery:nth-child(3) {
-    background: url(../../img/gallery_3.jpg);
+    background-image: linear-gradient(360deg, #15385F 0%, rgba(21, 56, 95, 0) 40%),url(../../img/gallery_3.jpg) ;
 }
 
 .__item-gallery:nth-child(4) {
-    background: url(../../img/gallery_4.jpg);
+    background-image: linear-gradient(360deg, #15385F 0%, rgba(21, 56, 95, 0) 40%),url(../../img/gallery_4.jpg) ;
     margin-right: 0px;
 }
 
@@ -90,53 +92,43 @@
     -moz-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    height: 300px;
     }
 }
 
+.slider__gallery .article__arrow {
+    margin: 20px auto;
+}
 
 
 .swiper_gallery .swiper-slide {
     background: #EDEDED;
-    width: 440px;
+    width: 300px;
+    height: 205px;
     img {
-        width: 440px;
+        width: 300px;
     }
 }
 
-.swiper_gallery .swiper-slide-prev {
-    width: 350px;
-    height: 205px;
-    background: #EDEDED;
-    margin-right: 10px;
+.swiper_gallery  .swiper-slide-active {
+    transform: scale(1.47);
+    transition: transform 1s ease, transform-origin 1s ease;
     img {
-        width: 350px;
+        width: 100%;
+        
+    }
+}
+
+.swiper_gallery .swiper-slide-duplicate-active {
+    width: 300px;
+    height: 205px;
+    img {
+        width: 300px;
         height: 205px;
     }
 }
 
-.swiper_gallery .swiper-slide-next {
-    width: 350px;
-    height: 205px;
-    background: #EDEDED;
-    margin-right: 10px;
-    img {
-        width: 350px;
-        height: 205px;
-    }
-
-}
-
-.swiper_gallery .swiper-slide-active {
-    background: #EDEDED;
-    width: 440px;
-    img {
-        width: 440px;
-    }
-}
-
-
-
-    .swiper-prev {
+.swiper_gallery .swiper-prev {
         transform: rotate(180deg);
     }
 
