--- a/scss/blocks/_team.scss
+++ b/scss/blocks/_team.scss
@@ -20,10 +20,20 @@
     padding-top: 90px;
 }
 
+.team_item .swiper-wrapper {
+    justify-content: space-between;
+}
+
 .team_item__block {
-    width: 273px;
+    max-width: 300px;
     border-right: 1px solid #E5E5E5;
-    margin-left: 40px;
+    padding-left: 40px;
+    height: 543px;
+}
+
+.team_item__block:first-child {
+    padding-left: 0px;
+    max-width: 260px;
 }
 
 .team_item__block:last-child {
@@ -58,5 +68,14 @@
     line-height: 130%;
     color: #E5E5E5;
     padding-top: 30px;
-    max-width: 240px;
+    max-width: 250px;
+}
+
+.team__img img {
+    max-width: 100%;
+}
+
+.team__img {
+    width: 200px;
+    height: 203px;
 }
