--- a/scss/blocks/_product.scss
+++ b/scss/blocks/_product.scss
@@ -136,8 +136,7 @@
 .__price {
     display: flex;
     justify-content: space-between;
-    align-items: baseline;
-    margin-bottom: 5px;
+    margin-bottom: 9px;
 }
 
 .__price p:first-child{
@@ -207,6 +206,7 @@
     max-width: 128px;
     display: flex;
     align-items: baseline;
+    margin-top: -3px;
     span {
         font-style: normal;
         font-weight: 500;
