--- a/scss/blocks/_article.scss
+++ b/scss/blocks/_article.scss
@@ -10,9 +10,14 @@
 
 .we_items_item_article {
     max-width: 700px;
+    margin-right: auto;
 }
 .we_items_item_p_article {
     padding-left: 0px;
+}
+
+.we_items_h1_article {
+    margin-left: 50px;
 }
 
 .article_title {
@@ -155,6 +160,8 @@
     color: #15385F;
     margin-top: 25px;
     margin-bottom: 70px;
+    display: flex;
+    flex-direction: column;
 }
 
 .promo_product .__item {
