--- a/scss/blocks/_media.scss
+++ b/scss/blocks/_media.scss
@@ -128,6 +128,9 @@
     .overlay_foure {
         overflow: none;
     }
+    .footer_item_input {
+        padding-left: 0px;
+    }
     ///buisnes///
     .article__buisnes {
         flex-direction: column;
@@ -1338,7 +1341,12 @@
     .article__buisnes .item__buisnes .descr__busines {
         max-width: 556px;
     }
-
+    .footer_item_input {
+        padding-left: 0px;
+    }
+    .footer_form {
+        width: 100%;
+    }
     .modal {
         width: 80%;
     }
@@ -2307,7 +2315,7 @@
     }
     
     .work_next_a {
-        font-size: 15px;
+        font-size: 12px;
         align-items: center;
     }
     
@@ -2416,7 +2424,9 @@
 }
 
 @media screen and (max-width: 576px) {
-
+    .footer_descr_phone {
+        margin-left: 0%;
+    }
      .modal {
         padding: 28px 15px;
         width: 90%;
@@ -3756,7 +3766,19 @@ margin-right: 6px;
 
     .we_items_h1 {
         font-size: 35px;
-        width: 353px;
+        width: 100%;
+    }
+    .work .we_items_item {
+        width: 90%;
+    }
+    .we_items_h1_article {
+        margin-left: 0px;
+    }
+    .we_items_item_p_reviews {
+        padding-left: 25px;
+    }
+    .footer_logo {
+        margin-left: 10px;
     }
     
     .we_items_item_p {
